--- a/DLife/Base.lproj/Main.storyboard
+++ b/DLife/Base.lproj/Main.storyboard
@@ -42,38 +42,6 @@
             </objects>
             <point key="canvasLocation" x="535.20000000000005" y="671.51424287856082"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="87P-TK-35F">
-            <objects>
-                <viewController id="9dV-YO-T4V" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="7Ot-i6-FYb">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ufZ-tA-gkl">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
-                                <connections>
-                                    <segue destination="zcN-KN-5K6" kind="embed" id="aTw-lJ-1IZ"/>
-                                </connections>
-                            </containerView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="0RQ-Pb-HeM" firstAttribute="bottom" secondItem="ufZ-tA-gkl" secondAttribute="bottom" id="6sK-M0-2gq"/>
-                            <constraint firstItem="0RQ-Pb-HeM" firstAttribute="trailing" secondItem="ufZ-tA-gkl" secondAttribute="trailing" id="8Nh-eD-YXc"/>
-                            <constraint firstItem="ufZ-tA-gkl" firstAttribute="top" secondItem="0RQ-Pb-HeM" secondAttribute="top" id="L62-uY-4KN"/>
-                            <constraint firstItem="ufZ-tA-gkl" firstAttribute="leading" secondItem="0RQ-Pb-HeM" secondAttribute="leading" id="Ns8-5u-fzJ"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="0RQ-Pb-HeM"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="" image="Wall" landscapeImage="Wall" largeContentSizeImage="Wall" selectedImage="Wall" id="VXZ-tA-Ax7">
-                        <inset key="imageInsets" minX="0.0" minY="6" maxX="0.0" maxY="-6"/>
-                    </tabBarItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="PYk-7Z-VEZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1471.2" y="671.51424287856082"/>
-        </scene>
         <!--Page1-->
         <scene sceneID="iNd-Br-NYR">
             <objects>
@@ -84,13 +52,15 @@
             </objects>
             <point key="canvasLocation" x="-2286" y="383"/>
         </scene>
-        <!--Page2VC-->
+        <!--Page2-->
         <scene sceneID="Tm2-o0-Nsr">
             <objects>
-                <viewControllerPlaceholder storyboardName="Page2" referencedIdentifier="Page2VC" id="zcN-KN-5K6" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="Page2" id="zcN-KN-5K6" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="yIm-CM-VvL"/>
+                </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gv2-Bd-vGU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1471" y="1151"/>
+            <point key="canvasLocation" x="-1561" y="382"/>
         </scene>
         <!--Page3-->
         <scene sceneID="DjV-n7-kJj">
@@ -147,7 +117,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="a77-LL-RXy" kind="relationship" relationship="viewControllers" id="RwZ-HH-k1v"/>
-                        <segue destination="9dV-YO-T4V" kind="relationship" relationship="viewControllers" id="q9L-br-1UJ"/>
+                        <segue destination="zcN-KN-5K6" kind="relationship" relationship="viewControllers" id="1Pc-Ym-3qZ"/>
                         <segue destination="ziH-tY-YC5" kind="relationship" relationship="viewControllers" id="QZG-GA-kwn"/>
                         <segue destination="jTA-8u-9gp" kind="relationship" relationship="viewControllers" id="Tpn-Fo-Ytx"/>
                     </connections>
@@ -159,6 +129,5 @@
     </scenes>
     <resources>
         <image name="Setting" width="33" height="30"/>
-        <image name="Wall" width="32" height="26"/>
     </resources>
 </document>
