--- a/DLife/Page3/Page3.storyboard
+++ b/DLife/Page3/Page3.storyboard
@@ -41,17 +41,6 @@
                                     <segue destination="mhn-Ye-9Vz" kind="show" id="1T1-zi-ehr"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FK4-lT-xEy">
-                                <rect key="frame" x="10" y="627" width="46" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="46" id="8KZ-Bh-Fsc"/>
-                                    <constraint firstAttribute="height" constant="30" id="F3r-2t-Iyz"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="skip:" destination="GEA-Dm-kkT" eventType="touchUpInside" id="iWg-dz-aly"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6P4-VT-9gj">
                                 <rect key="frame" x="303" y="574" width="62" height="30"/>
                                 <constraints>
@@ -236,8 +225,6 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="wUq-fe-OuT" firstAttribute="bottom" secondItem="FK4-lT-xEy" secondAttribute="bottom" constant="10" id="01r-Us-EJ0"/>
-                            <constraint firstItem="FK4-lT-xEy" firstAttribute="leading" secondItem="wUq-fe-OuT" secondAttribute="leading" constant="10" id="3E7-z3-H4Z"/>
                             <constraint firstItem="hFb-0U-8Ss" firstAttribute="top" secondItem="6P4-VT-9gj" secondAttribute="bottom" constant="23" id="3Ge-eM-wVw"/>
                             <constraint firstItem="hFb-0U-8Ss" firstAttribute="leading" secondItem="gbN-RX-pq3" secondAttribute="trailing" constant="71" id="4EJ-6S-mqz"/>
                             <constraint firstItem="wUq-fe-OuT" firstAttribute="trailing" secondItem="6P4-VT-9gj" secondAttribute="trailing" constant="10" id="E37-39-Fac"/>
@@ -255,11 +242,11 @@
                         <viewLayoutGuide key="safeArea" id="wUq-fe-OuT"/>
                     </view>
                     <navigationItem key="navigationItem" id="R9c-gI-WOr">
+                        <nil key="title"/>
                         <barButtonItem key="rightBarButtonItem" image="AddFriend" id="FFw-xJ-b0L">
                             <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </barButtonItem>
                     </navigationItem>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="dny-df-gct" id="E2K-KR-G4e"/>
@@ -278,7 +265,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="erd-oU-rtj">
-                                <rect key="frame" x="137" y="312.5" width="100" height="42"/>
+                                <rect key="frame" x="137.5" y="312.5" width="100" height="42"/>
                                 <color key="backgroundColor" red="0.016970811411738396" green="0.46056070923805237" blue="0.36870548129081726" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="jjP-CJ-x7j"/>
@@ -355,7 +342,6 @@
                         <viewLayoutGuide key="safeArea" id="fd2-tX-cAg"/>
                     </view>
                     <navigationItem key="navigationItem" title="今日好友" id="mk3-Mr-BIe"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <nil key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7no-aC-Jhv" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -446,10 +432,10 @@
             </objects>
             <point key="canvasLocation" x="742" y="930"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--好友列表-->
         <scene sceneID="6HI-FU-tIs">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WOa-Dl-K6T" sceneMemberID="viewController">
+                <navigationController title="好友列表" automaticallyAdjustsScrollViewInsets="NO" id="WOa-Dl-K6T" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="" image="Friend" id="JhP-MM-eZc">
                         <inset key="imageInsets" minX="0.0" minY="6" maxX="0.0" maxY="-6"/>
                     </tabBarItem>
